# avy-advisor

./: README.md  docker-compose.yml
avy-advisor-frontend/: Dockerfile  index.html  index.js  package.json
avy-advisor-frontend/components/: home.js
avy-advisor-server/: Cargo.toml
avy-advisor-server/src/: main.rs
avy-advisor-server/templates/: index.html.tera
