[package]
name = "avy-advisor-server"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]

[dependencies]
rocket = '0.3.6'
rocket_codegen = '0.3.6'
rocket_contrib = { version="*", default-features=false, features=["json", "tera_templates"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
